# supplier-documents-genai

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: README.md  requirements.txt
backend/app/: main.py
backend/app/db/: engine.py  models.py  repositories.py
backend/app/routers/: upload.py
backend/tests/: test_smoke.py
data/: README.md
data/analytics/: ingest.py
fullstack/: README.md
fullstack/backend/app/: main.py
fullstack/backend/app/utils/: llm_client.py
fullstack/backend/configs/: attribute_example.yaml
fullstack/frontend/: README.md
genai/: Dockerfile  Dockerfile.dockerignore  NOTES.md  README.md  pyproject.toml  requirements.txt
genai/app/: config.py  models.py
genai/app/modules/: extractor.py  grounding.py  normalization.py  registry.py
genai/app/prompts/: extraction_prompts.py
genai/app/utils/: llm_client.py
genai/eval/: config.py  dataset.jsonl  run_eval.py
genai/tests/: __init__.py  test_config.py  test_conventional.py  test_eval_dataset.py  test_eval_metrics.py  test_extractor_baseline.py  test_extractor_grounded.py  test_grounding.py  test_llm_client.py  test_models.py  test_normalization.py  test_prompts.py  test_registry.py
ml/: README.md  requirements.txt
ml/app/core/: interfaces.py  schemas.py
ml/app/modules/: embedding_matcher.py  fuzzy_matcher.py
ml/configs/: synonyms.yaml
ml/eval/: dataset.jsonl  run_eval.py
ml/tests/: test_matcher.py
scripts/: __init__.py  check_conventional.py
