[project]
name = "supplier-documents-genai"
version = "0.1.0"
description = "Извлечение атрибутов из технических документов поставщиков"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pre-commit>=4,<5",
    "pytest>=8.3,<10",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=6,<8",
    "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "eval", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "PIE",
    "PT",
    "RUF012",
    "RUF100",
    "SIM",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["app", "eval"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
files = ["app", "eval", "tests"]
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
show_error_codes = true
show_error_context = true
pretty = true
exclude = ["^\\.venv/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
    "--cov=app",
    "--cov=eval",
    "--cov-report=term-missing:skip-covered",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = ["error"]
xfail_strict = true

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 80
precision = 1
show_missing = true
skip_covered = true
skip_empty = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
